# 4-20mA-Loop-Calibrator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md  docker-compose.yaml  platformio.ini
ld/: CMakeLists.txt  stm32f03.ld  stm32f09.ld
lib/: CMakeLists.txt
openocd/: ST-LINK-V2-1.cfg  STM32-NUCLEO-F091RC.cfg  stm32f0discovery.cfg
src/: CMakeLists.txt  button.c  button.h  controller.c  controller.h  indicator.c  indicator.h  main.c  model.c  model.h  user-button.c  user-button.h  view.c  view.h
